remove role repository, roles as enum
constrain search account for authenticated user
